--- a/StU/StU.vcxproj
+++ b/StU/StU.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Rectangle.cpp" />
@@ -137,6 +138,7 @@
     <ClInclude Include="Circle.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Rectangle.h" />
   </ItemGroup>
