--- a/StU/StU.vcxproj
+++ b/StU/StU.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="InputManager.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Circle.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="InputManager.h" />
