--- a/StU/StU.vcxproj
+++ b/StU/StU.vcxproj
@@ -129,10 +129,12 @@
     <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Projectile.cpp" />
@@ -142,10 +144,12 @@
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Circle.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="LevelManager.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="Rectangle.h" />
